--- a/radvalley.tex
+++ b/radvalley.tex
@@ -910,9 +910,10 @@ the MAP occurrence rates. Furthermore, the addition of PCs reduces the median $f
 with $r_p>1$ R$_{\oplus}$ from
 0.0216 to 0.0186 planets per star (i.e. $\sim 15$\% improvement). However, the partial filling of the gap is
 further substantiated as the contrast between the maximum $f_j$ of the rocky planet peak ($r_p \sim 1.3$ R$_{\oplus}$)
-and the minimum $f_j$ of the valley ($r_p \sim 1.6$ R$_{\oplus}$) decreases from 0.070 to 0.054 R$_{\oplus}$
-%(i.e. $3.2\sigma \to 2.9\sigma$).
-Contamination by true FPs in the planet sample containing
+and the minimum $f_j$ of the valley ($r_p \sim 1.6$ R$_{\oplus}$) decreases from 0.070 to 0.054 R$_{\oplus}$. This
+\textbf{corresponds to a less significant detection of the bimodality in the radiu valley as we find that
+$\Delta(\text{BIC}_{12})\sim 4$ which is less than the value obtained when only confirmed planets are considered:
+$\Delta(\text{BIC}_{12})\sim 20$.} Contamination by true FPs in the planet sample containing
 PCs may contribute to the reduced significance of the valley so we revert to considering confirmed planets only
 for the remainder of this study.
 
