--- a/refs.bib
+++ b/refs.bib
@@ -28324,3 +28324,24 @@ archivePrefix = {arXiv},
   volume = 90,
   year = 1995
 }
+
+@ARTICLE{kite19,
+       author = {{Kite}, Edwin S. and {Fegley}, Bruce, Jr. and {Schaefer}, Laura and
+         {Ford}, Eric B.},
+        title = "{Superabundance of Exoplanet Sub-Neptunes Explained by Fugacity Crisis}",
+      journal = {\apjl},
+     keywords = {Extrasolar rocky planets, Exoplanet atmospheres, Exoplanet evolution, Astrophysics - Earth and Planetary Astrophysics, Physics - Geophysics},
+         year = 2019,
+        month = dec,
+       volume = {887},
+       number = {2},
+          eid = {L33},
+        pages = {L33},
+          doi = {10.3847/2041-8213/ab59d9},
+archivePrefix = {arXiv},
+       eprint = {1912.02701},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...887L..33K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
