--- a/radvalley.tex
+++ b/radvalley.tex
@@ -1427,7 +1427,7 @@ mid-to-late K dwarfs, the radius valley is centered at $1.54\pm 0.16$ R$_{\oplus
 reader that the exact value is dependent on the planet's separation (see \autoref{fig:fmapF}). A consistent value of
 $1.55^{+0.52}_{-0.50}$ is also recovered---albeit with reduced significance---around stars later than about M2.5V.
 This value is slightly lower than the valley locations measured around Sun-like stars of
-$\sim 1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $\sim 1.7$ R$_{\oplus}$ for $M_s \sim 0.85$ M$_{\odot}$
+$1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $1.7$ R$_{\oplus}$ for $M_s \sim 0.85$ M$_{\odot}$
 \citep{fulton18}.
 
 Furthermore, the opposing slope signs of the radius valley around Sun-like and low mass
@@ -1435,10 +1435,11 @@ stars (c.f. \autoref{fig:fmapF} and \autoref{table:slopes})
 has implications for where in the planetary parameter space one expects to find
 predominantly rocky and non-rocky planets. \autoref{fig:transition} highlights the region of interest for resolving
 the rocky to non-rocky transition in the $P-r_p$ space. This region is defined by the intermediate region between the
-radius valley slope measured in this work to the slope measured around Sun-like stars from the CKS sample \citep{martinez19}
-where the latter is first scaled
+radius valley slope measured in this work---consistent with models of gas-poor formation---to the slope measured
+around Sun-like stars from the CKS sample \citep{martinez19}. In \autoref{fig:transition}, the latter is scaled
 from its median stellar mass of 1.01 M$_{\odot}$ to the median stellar mass of our sample (0.65 M$_{\odot}$) using the
-$M_s$-dependent scaling relation of the radius valley under photoevaporation \citep{wu19}.
+$M_s$-dependent scaling relation of the radius valley under photoevaporation
+\citep[$r_p \propto (M_s/\text{M}_{\odot})^{1/4}$;][]{wu19}.
 
 The measured transitions from each stellar mass regime
 intersect at $P\sim 23.52$ days such that two regions of interest emerge and are bounded by
@@ -1454,25 +1455,26 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
 \noindent where
 
 \begin{align}
-  r_{p,\text{valley,this work}} &= 0.11\cdot \log_{10}(P)+1.52, \\
+  r_{p,\text{valley,this work}} &= 0.11\cdot \log_{10}(P)+1.52 \text{ and} \\
   r_{p,\text{valley,M19}} &= -0.48\cdot \log_{10}(P)+2.32.
 \end{align}
 
 \noindent These subsets of the $P-r_p$ space define the regions of interest for resolving the
-  rocky to non-rocky transition around low mass stars. For example, at $P\lesssim 23.52$ days thermally driven
-  atmospheric mass loss, such as that from photoevaporation, predicts that planets in the set defined by
+  rocky to non-rocky transition around low mass stars. For example, at $P\lesssim 23.52$ days, thermally-driven
+  atmospheric mass loss predicts that planets in the set defined by
   Eq.~\ref{eq:transition} should be predominantly rocky. Whereas the gas-poor formation scenario, whose predicted
-  radius valley slope differs in sign from that of thermally driven mass loss, predicts that those planets should be
+  radius valley slope differs in sign from that of thermally-driven mass loss, predicts that those planets should be
   predominantly non-rocky. These predictions can be robustly tested by targeting planets within the
   Eq.~\ref{eq:transition} regions of interest and obtaining precise planetary bulk density measurements.
   As seen in \autoref{fig:transition}, there are only $\sim 5$ planets in the region of interest with $\geq 3\sigma$ bulk
   density measurements. These planets reveal the decrease in bulk density with increasing $r_p$ although insufficient
   information is available to resolve a possibly sharp transition. \textbf{At the time of writing, \tess{}
-    has identified such eleven TOIs\footnote{\tess{} Object-of-Interest.}
-    around stars with \teff{} $<4700$ K that satisfy Eq.~\ref{eq:transition}. Ten of these TOIs have
+    has identified eleven TOIs\footnote{\tess{} Object-of-Interest.}
+    around stars with \teff{} $<4700$ K that lie within the region of interest defined by Eq.~\ref{eq:transition}
+    with $P<23.52$ days. Ten of these TOIs have
     $J<11$ and should be strongly considered as targets for RV follow-up campaigns}\footnote{TOIs: 134.01
     \citep{astudillodefru19}, 237.01, 544.01, 702.01, 807.01, 833.01,
-    836.02, 873.01, 1075.01, and 1201.01.}. Note that all ten TOIs have $P<23.52$ days.
+    836.02, 873.01, 1075.01, and 1201.01.}.
 
 \begin{figure}
   \centering
